[gd_scene load_steps=17 format=4 uid="uid://dtj0qv3fmmrik"]

[ext_resource type="Script" path="res://scripts/player/playercontroller.gd" id="1_ve6k1"]
[ext_resource type="Script" path="res://scripts/player/flashlight_control.gd" id="2_6q6cu"]
[ext_resource type="AudioStream" uid="uid://c3k5jrxv2tasy" path="res://assets/sounds/metal_step/metal_step_-01.wav" id="2_uwvuo"]
[ext_resource type="AudioStream" uid="uid://b4ta3shtb4rvc" path="res://assets/sounds/light-switch-81967.mp3" id="3_vpqoh"]
[ext_resource type="AudioStream" uid="uid://ws7tghf1pkla" path="res://assets/sounds/metal_step/metal_step_-02.wav" id="3_x4xhm"]
[ext_resource type="Script" path="res://scripts/player/raycast_interact_signals.gd" id="3_xqmyb"]
[ext_resource type="AudioStream" uid="uid://duk3jse1a1irk" path="res://assets/sounds/metal_step/metal_step_-03.wav" id="4_1di5f"]
[ext_resource type="Texture2D" uid="uid://c7e74hrqpbhwi" path="res://assets/textures/UI/CROSS.svg" id="4_r3k3k"]
[ext_resource type="AudioStream" uid="uid://r4ln1w2wjlk4" path="res://assets/sounds/metal_step/metal_step_-04.wav" id="5_gvl0y"]
[ext_resource type="Script" path="res://scripts/UI/message_display_controller.gd" id="6_1t8vm"]
[ext_resource type="AudioStream" uid="uid://dkv8hjp721hsi" path="res://assets/sounds/metal_step/metal_step_-05.wav" id="6_87xo5"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_il2d2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yjqeq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3sia6"]

[sub_resource type="OggPacketSequence" id="OggPacketSequence_eymiu"]
packet_data = Array[Array]([[PackedByteArray("AXZvcmJpcwAAAAABRKwAAAAAAAAAdwEAAAAAALgB")], [PackedByteArray("A3ZvcmJpczQAAABYaXBoLk9yZyBsaWJWb3JiaXMgSSAyMDIwMDcwNCAoUmVkdWNpbmcgRW52aXJvbm1lbnQpAAAAAAE="), PackedByteArray("BXZvcmJpcylCQ1YBAAgAAAAxTCDFgNCQVQAAEAAAYCQpDpNmSSmllKEoeZiUSEkppZTFMImYlInFGGOMMcYYY4wxxhhjjCA0ZBUAAAQAgCgJjqPmSWrOOWcYJ45yoDlpTjinIAeKUeA5CcL1JmNuprSma27OKSUIDVkFAAACAEBIIYUUUkghhRRiiCGGGGKIIYcccsghp5xyCiqooIIKMsggg0wy6aSTTjrpqKOOOuootNBCCy200kpMMdVWY669Bl18c84555xzzjnnnHPOCUJDVgEAIAAABEIGGWQQQgghhRRSiCmmmHIKMsiA0JBVAAAgAIAAAAAAR5EUSbEUy7EczdEkT/IsURM10TNFU1RNVVVVVXVdV3Zl13Z113Z9WZiFW7h9WbiFW9iFXfeFYRiGYRiGYRiGYfh93/d93/d9IDRkFQAgAQCgIzmW4ymiIhqi4jmiA4SGrAIAZAAABAAgCZIiKZKjSaZmaq5pm7Zoq7Zty7Isy7IMhIasAgAAAQAEAAAAAACgaZqmaZqmaZqmaZqmaZqmaZqmaZpmWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWZZlWUBoyCoAQAIAQMdxHMdxJEVSJMdyLAcIDVkFAMgAAAgAQFIsxXI0R3M0x3M8x3M8R3REyZRMzfRMDwgNWQUAAAIACAAAAAAAQDEcxXEcydEkT1It03I1V3M913NN13VdV1VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVWB0JBVAAAEAAAhnWaWaoAIM5BhIDRkFQCAAAAAGKEIQwwIDVkFAAAEAACIoeQgmtCa8805DprloKkUm9PBiVSbJ7mpmJtzzjnnnGzOGeOcc84pypnFoJnQmnPOSQyapaCZ0JpzznkSmwetqdKac84Z55wOxhlhnHPOadKaB6nZWJtzzlnQmuaouRSbc86JlJsntblUm3POOeecc84555xzzqlenM7BOeGcc86J2ptruQldnHPO+WSc7s0J4ZxzzjnnnHPOOeecc84JQkNWAQBAAAAEYdgYxp2CIH2OBmIUIaYhkx50jw6ToDHIKaQejY5GSqmDUFIZJ6V0gtCQVQAAIAAAhBBSSCGFFFJIIYUUUkghhhhiiCGnnHIKKqikkooqyiizzDLLLLPMMsusw84667DDEEMMMbTSSiw11VZjjbXmnnOuOUhrpbXWWiullFJKKaUgNGQVAAACAEAgZJBBBhmFFFJIIYaYcsopp6CCCggNWQUAAAIACAAAAPAkzxEd0REd0REd0REd0REdz/EcURIlURIl0TItUzM9VVRVV3ZtWZd127eFXdh139d939eNXxeGZVmWZVmWZVmWZVmWZVmWZQlCQ1YBACAAAABCCCGEFFJIIYWUYowxx5yDTkIJgdCQVQAAIACAAAAAAEdxFMeRHMmRJEuyJE3SLM3yNE/zNNETRVE0TVMVXdEVddMWZVM2XdM1ZdNVZdV2Zdm2ZVu3fVm2fd/3fd/3fd/3fd/3fd/XdSA0ZBUAIAEAoCM5kiIpkiI5juNIkgSEhqwCAGQAAAQAoCiO4jiOI0mSJFmSJnmWZ4maqZme6amiCoSGrAIAAAEABAAAAAAAoGiKp5iKp4iK54iOKImWaYmaqrmibMqu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67qu67pAaMgqAEACAEBHciRHciRFUiRFciQHCA1ZBQDIAAAIAMAxHENSJMeyLE3zNE/zNNETPdEzPVV0RRcIDVkFAAACAAgAAAAAAMCQDEuxHM3RJFFSLdVSNdVSLVVUPVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVdU0TdM0gdCQlQAAGQAAI0EGGYQQinKQQm49WAgx5iQFoTkGocQYhKcQMww5DSJ0kEEnPbiSOcMM8+BSKBVETIONJTeOIA3CplxJ5TgIQkNWBABRAACAMcgxxBhyzknJoETOMQmdlMg5J6WT0kkpLZYYMyklphJj45yj0knJpJQYS4qdpBJjia0AAIAABwCAAAuh0JAVAUAUAABiDFIKKYWUUs4p5pBSyjHlHFJKOaecU845CB2EyjEGnYMQKaUcU84pxxyEzEHlnIPQQSgAACDAAQAgwEIoNGRFABAnAOBwJM+TNEsUJUsTRc8UZdcTTdeVNM00NVFUVcsTVdVUVdsWTVW2JU0TTU30VFUTRVUVVdOWTVW1bc80ZdlUVd0WVdW2ZdsWfleWdd8zTVkWVdXWTVW1ddeWfV/WbV2YNM00NVFUVU0UVdVUVds2Vde2NVF0VVFVZVlUVVl2ZVn3VVfWfUsUVdVTTdkVVVW2Vdn1bVWWfeF0VV1XZdn3VVkWflvXheH2feEYVdXWTdfVdVWWfWHWZWG3dd8oaZppaqKoqpooqqqpqrZtqq6tW6LoqqKqyrJnqq6syrKvq65s65ooqq6oqrIsqqosq7Ks+6os67aoqrqtyrKwm66r67bvC8Ms67pwqq6uq7Ls+6os67qt68Zx67owfKYpy6ar6rqpurpu67pxzLZtHKOq6r4qy8KwyrLv67ovtHUhUVV13ZRd41dlWfdtX3eeW/eFsm07v637ynHrutL4Oc9vHLm2bRyzbhu/rfvG8ys/YTiOpWeatm2qqq2bqqvrsm4rw6zrQlFVfV2VZd83XVkXbt83jlvXjaKq6roqy76wyrIx3MZvHLswHF3bNo5b152yrQt9Y8j3Cc9r28Zx+zrj9nWjrwwJx48AAIABBwCAABPKQKEhKwKAOAEABiHnFFMQKsUgdBBS6iCkVDEGIXNOSsUclFBKaiGU1CrGIFSOScickxJKaCmU0lIHoaVQSmuhlNZSa7Gm1GLtIKQWSmktlNJaaqnG1FqMEWMQMuekZM5JCaW0FkppLXNOSuegpA5CSqWkFEtKLVbMScmgo9JBSKmkElNJqbVQSmulpBZLSjG2FFtuMdYcSmktpBJbSSnGFFNtLcaaI8YgZM5JyZyTEkppLZTSWuWYlA5CSpmDkkpKrZWSUsyck9JBSKmDjkpJKbaSSkyhlNZKSrGFUlpsMdacUmw1lNJaSSnGkkpsLcZaW0y1dRBaC6W0FkpprbVWa2qtxlBKayWlGEtKsbUWa24x5hpKaa2kEltJqcUWW44txppTazWm1mpuMeYaW2091ppzSq3W1FKNLcaaY2291Zp77yCkFkppLZTSYmotxtZiraGU1koqsZWSWmwx5tpajDmU0mJJqcWSUowtxppbbLmmlmpsMeaaUou15tpzbDX21FqsLcaaU0u11lpzj7n1VgAAwIADAECACWWg0JCVAEAUAABBiFLOSWkQcsw5KglCzDknqXJMQikpVcxBCCW1zjkpKcXWOQglpRZLKi3FVmspKbUWay0AAKDAAQAgwAZNicUBCg1ZCQBEAQAgxiDEGIQGGaUYg9AYpBRjECKlGHNOSqUUY85JyRhzDkIqGWPOQSgphFBKKimFEEpJJaUCAAAKHAAAAmzQlFgcoNCQFQFAFAAAYAxiDDGGIHRUMioRhExKJ6mBEFoLrXXWUmulxcxaaq202EAIrYXWMkslxtRaZq3EmForAADswAEA7MBCKDRkJQCQBwBAGKMUY845ZxBizDnoHDQIMeYchA4qxpyDDkIIFWPOQQghhMw5CCGEEELmHIQQQgihgxBCCKWU0kEIIYRSSukghBBCKaV0EEIIoZRSCgAAKnAAAAiwUWRzgpGgQkNWAgB5AACAMUo5B6GURinGIJSSUqMUYxBKSalyDEIpKcVWOQehlJRa7CCU0lpsNXYQSmktxlpDSq3FWGuuIaXWYqw119RajLXmmmtKLcZaa825AADcBQcAsAMbRTYnGAkqNGQlAJAHAIAgpBRjjDGGFGKKMeecQwgpxZhzzimmGHPOOeeUYow555xzjDHnnHPOOcaYc8455xxzzjnnnHOOOeecc84555xzzjnnnHPOOeecc84JAAAqcAAACLBRZHOCkaBCQ1YCAKkAAAARVmKMMcYYGwgxxhhjjDFGEmKMMcYYY2wxxhhjjDHGmGKMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhba6211lprrbXWWmuttdZaa60AQL8KBwD/BxtWRzgpGgssNGQlABAOAAAYw5hzjjkGHYSGKeikhA5CCKFDSjkoJYRQSikpc05KSqWklFpKmXNSUiolpZZS6iCk1FpKLbXWWgclpdZSaq211joIpbTUWmuttdhBSCml1lqLLcZQSkqttdhijDWGUlJqrcXYYqwxpNJSbC3GGGOsoZTWWmsxxhhrLSm11mKMtcZaa0mptdZiizXWWgsA4G5wAIBIsHGGlaSzwtHgQkNWAgAhAQAEQow555xzEEIIIVKKMeeggxBCCCFESjHmHHQQQgghhIwx56CDEEIIIYSQMeYcdBBCCCGEEDrnHIQQQgihhFJK5xx0EEIIIZRQQukghBBCCKGEUkopHYQQQiihhFJKKSWEEEIJpZRSSimlhBBCCKGEEkoppZQQQgillFJKKaWUEkIIIZRSSimllFJCCKGUUEoppZRSSgghhFJKKaWUUkoJIYRQSimllFJKKSGEEkoppZRSSimlAACAAwcAgAAj6CSjyiJsNOHCA1BoyEoAgAwAAHHYausp1sggxZyElkuEkHIQYi4RUoo5R7FlSBnFGNWUMaUUU1Jr6JxijFFPnWNKMcOslFZKKJGC0nKstXbMAQAAIAgAMBAhM4FAARQYyACAA4QEKQCgsMDQMVwEBOQSMgoMCseEc9JpAwAQhMgMkYhYDBITqoGiYjoAWFxgyAeADI2NtIsL6DLABV3cdSCEIAQhiMUBFJCAgxNueOINT7jBCTpFpQ4CAAAAAAABAB4AAJINICIimjmODo8PkBCREZISkxOUAAAAAADgAYAPAIAkBYiIiGaOo8PjAyREZISkxOQEJQAAAAAAAAAAAAgICAAAAAAABAAAAAgI")], [PackedByteArray("nPV0it0bVitE/xMW6FCw5WRjRxPXuPGviVe866dPzzl4QDi8OBnIzxMf55+rB/IRBA=="), PackedByteArray("XApxM+L27pSQvKyBGHSA7+aoeVlvtP9WGOYrFbz6zxhq+WBaBPqQQz+YnDeoN8sVVQk="), PackedByteArray("ZBoRY5eEkvtC9dlHSAv/Tw86OqbIoW3ribHKpscWy/1h0FGnqqS7cYLn4eB4lYq2Ag=="), PackedByteArray("VBJRZkOVeUL4ar1dCxpVwNyrB5iTrpl7a6FlJXjy9a0IGv/LtCTwiBE+GwNROUAjAA=="), PackedByteArray("OmgM+Bg3hgWgez8xYdK0Mzs/7QGTSpIKGFepB+C0h7sc3sm7LnNHEZX3Wv3zxStpWsabedJKZmrCcOsy64ECq8BAbFrvER0AXqulfrDLeWclnPeJ/FUl/uZ9hiKXym+gvjXOSuX+dLLrXDOBtI9bSU8kOhB/PrX4o24o0M477I6UucQdQKg4djSyRJJAvzTOAHI6tUowev5m12EptYlSET0eR/bYb2UzZvId/xRMuI4eBSGh13sLuu5KKLi4FJsanqtN/nIDqMciaWiJcT9+8psAAA=="), PackedByteArray("/mk00QcKkCGLvuaWCJqmAEt4dFVtSmoruQHw3jz6a6KZ2d5x/+fhwJHm4PD30m7HqMPUKJNBrU27tckm9J1LrsConqwZhJLx8ZjCiMoVTi1Mc7GIQ4cBmF8XjZEWRwoNST52HPFaPPNJYgVYJctAp8ODEasI+rFGE4bW/ndIOPb36ymHPDw4LJLLePPhNrKGPh4AVLuNOWXDWLJCQri4epEfRBpuwV0JWEzENJuxYuur2kGN8idbJaqx6aaQyTE5WcMEANjeJXEAAA=="), PackedByteArray("HjmkboxqALKZLHx9BjsAZkCRpmlZTysvAfDOumng/WQ1/fv+0c+zNtmlOTswaH7LLWvC5uLV7OTg7SuTpVIpKajcS4RNgOHhNn1jm2HpXCqJcDty1O62yF4isB2ZMpLiGZqymnKeK0YtXENKNR5UXnIkgJ2+es8RAU0FhF1lGOZXUsEAvdBkM8ZVH8qZYHQzj1qTTe1wK7PrYaOFmdvTcUljvt27h+KCPnuyC3g8TNW4wawFRNuwadKfcb/kNzxmnIVdS5CWBwAA"), PackedByteArray("XolkVgsENwTIQc8tbujChgYwnZQ8Gi1HPwRA4sFrd7ds/WT+vLs2nz6cf2NybNllX58Ym3ez+jAbF5u8q04TBPTR0DzYkxo0NbZAcbSF4ui0JkbqDXacaukdjlxG4ZfpEyyIupRf8a1EGNT28X7cKgkT/lekBB21c8YX+uga6/h5HDzR0bIdqBMnnqQe7nrFC1Ib3nP1EkXUdeD/maDwwQVdL4T//5eOHgk+FbQqfbJE7TfkLt0sCuS0MsVa+vsFogCQOssnedJU4n5SO+I3BsD4kQA="), PackedByteArray("njmUuKcpApipBa8Y69OCEp0lQJpOE22c8i2A1Xab/M+P8XLM+zSLF0fnbMwPiHE3Z46HX7FqnMTR2vCZndEcPW5WK7DDfOZ1cc85udAZLLqkvAktSXIlPmbMyjithgSqtsCPgMxaraxLKzmMCW5YhiICWIhKzfaOTYdGllEwhGwhxy99u9NN6X5LAkMTlQ0T/1iA50anhz8BY7xmAWwI0++E7KClwrQcqeWj4HcVtLAeawdYQIALWswHSwRv0lgoXAvVvu51AQ=="), PackedByteArray("fjiEcIkXUaBCxn/PKNwEwbSSKqctyR6Ag+8OfZlbJ47yK5GfrVMp61vx4F3LX2mpf0musskACEP8rbauzQBDnARPS/pTAdUeZbVPYQcaF0A6d6Hu9SwuaBrrXfIpyWuuxlVKwTTDVL3zvudEAEfRIk/tVE58Kf1fOxgrs9iO7vw++PXSorSy/f/lI92A+wLN9HP9obTNhgEsYeS3QDeZZI4MtprFpY005HWDxj7gnuM0YO6EoVwl2K/JKj+D7QkAAA=="), PackedByteArray("PjjEZgI5XzQBZz69uy+aB4MY26qYOCdlLYBlSf9iPduv3FimH8z4+eLOcIw8kavmT/vDZuhhZVPYmC6lmDkFsrRVWCkrSLs/WrZu7t+sZW0odr9WLi83tLJW72tgm0lu+Z91JKxxnTGI2tKZ780gnEo6sJDSBKMwCFxHj0ZxCjBNg4QrhlK25A0WoKwbmguoAVMhE/TJWofV9nxAvZbAbUZLR4jvqCnwgBGA/WBcYKmTNSMAsJ5Ae5qnAod1HNYB"), PackedByteArray("/jekugQIsMB3m8XymQYCjG0SiLJS8oQBPPk4MF4fvnuaT7bl9tI3pTz+MoJlOmFbseeKsyZQ6nIdP9KquWl60SC4/deDUz6A3luhZ4fuxCZFkKjiPykRLlhAGqt1kk5P7NMvfwfznBa5XbmPvfSOX86nFOgD2NxbacqTSnJvQjHzyOcH+HZ0xfvoRzp4kdpkViaGsNIK5Lb3GXAATH2HD4r0/wAGSZ9qBljI8d/q8wJMVh2AbIbermi4AVdc3wGcqjhVAQ=="), PackedByteArray("vjfEwudIRK/mSx214D7hAk3yxKSqyk+cDgae9AG40ee2ZrjyZlQYH0rS7VOlHAGA5d0QoVj1Qfvy753qK49It/mQBlAYxxJPmpmQKzpivWrifa3jUlrHrWS6qudta1/urKqL4lcEgEPmoqsZ8n1+pnbUnPWlA2BmxSnx71I/DYCkCit7EfiNcTREMdq45BXQTI19UJ0tDmXpTrNweo+cdqjLcTcr2FT3IVLi/rM3Bawj8Y3gOzpjhRdg40616WjQ/dhlYQzvRwCI/c9oAw=="), PackedByteArray("/jeU3kdAgE4OJYs7vSi0E2CsmoRk40kFpA/AKjPZr+8fevY0v+XK9MYxZZlY7PP07OeuZaUPPgWEBHnwHtsdCKTjP3CuJtJN2eo8sr2c3D/Jfn7uBtTCqxBJISPev5/y1vGsqCT684SD4XTPc3UaRFMykMri3aMBrh4pVS8m+58hAaglc0xZvkb5HYhPRgvZRytSPpMybmZ0G0z2SS0VCRLYZWGby6ZZnHxJde8AgCxLRdOIByrzhpXL9gDIzwSgfrwZADRH5Z+dJg=="), PackedByteArray("3jeUqQA8ANB7ehwLyNAAKzQkrZ8vHfATBhCOYqJFmS93RW6mp9j7k7B+mv2JKWMjM7OGXEh1M6nBWzs2HyoAEze5GdeVPJ2rmmHkTDvN77NdbSvTH6SZyu/UaMyPD7GqJtX1J1IDaiTrJLgZ/oNTEtv7d3kpMGXvLpDxwT0r5NK1s4tOYnTGY59Ad1S7yhlf+x9cgaFvWJoOAHMDKEDGClC+A18r5wHgq6NxU0TBVCjKMR/EwkH+BQ/dsgPgwDEA"), PackedByteArray("vjcUpQGxg4SZ3v0QCgYygUlafhKV04YEYBm8/fVfR8fNsxKvffnVsv1X/Z23ufhuqGKduRcnYcK2ttQ/pn1s1wYg33cX3hEzu/n+NBmxg4ICoIaZ2fSp4jmYab1Jeu3st82bPj7edbyd/xCz1sx1cVpr9NfOEf1M4NK8ojuBvJznXKC1TuSxPwrEuaRia0l0Afxp9//iX0BC8bVqVSLuW9HyE1WZEOlGoJswDA/cCM+lA1ZCTrJR0QGlecc57NiJYiLYCg=="), PackedByteArray("vjfUzgG6A0Cfd0EsGQBglJPynQ151qNA2/I3zeEtSfl61sz5zPnDdfXHw5unLiRfjalPb8aTNf4jt2RT8Uj3RRqIhmab32NMEXvpMYQq62QLUr3lOljinPl7Qm8eHReGSdpaEWVkYDjuia0jWDOUW0TfiCzJKdfQmacS1QbCQHMg8Wty9ljVZ6JBlbYGKpMr03u859OWNJgHBwgd6JZqdOhLwKOSqvYTbNhsfH9c6Y7juwKw0moAoi9/chkX5s3gTA0A"), PackedByteArray("HjdUgAFiB1To222pD6St1tPBCtD1JYFW5JpkAwDgn++ZNq8Ob+8f37P8/DHrw9R4Ybg/996yko3DtewsaoqYk6zueC1avQDANasTKLtUl+m2zMMpoqOuUeVXBkTESSVEWk76fOqUFpMOlFS434gN7nbVvXqSZZcjC3mkZpsf0U4ufaxhXQju5M4iePebgbpXH64GECuRW/RRdLciBc9Wj4zjjmBohnW4AtEBsKwJfLbVo6F1OPgTIbo5xAPLFHl8XnAOKOO6UAQb55Yv6b8GAOATA8BuAg=="), PackedByteArray("HjdkwoHgY/SgRHsKjmkUEA6nYww0TeI1ALK3zfn70+3WsY10+881P4Y5xuTd3P9fVM3nyvCPdLXsEHkG8LBxxjGAfByLGsbTYm41aGH+Eh+ynJHAfYRYlHCvweG9sxVSM4F0Tba9r9RHTEBMlgS2kuLLA4AUZLLz18VA8Qt2wLOE0bZROFXLvk4AAL7O7dxbC9YAAJg+TX617AAA2ACUjocL2MkS4F7JqrV4B4gSXmsi/yXAjQa0AG/qAAAAsHK7nRs6gJbUAA=="), PackedByteArray("vjaszkcmwioPNuwbBeOt5KOBSbWVhIQ1hgTw6fm/2zbJMHF5YJD9HMuZt7dB+++2mOPM/kFDazhjbswm6baUhzb2NpNhHVX8DnZhHUvdq8BrLd4z06vOMU0AtFc/5TYbWi7LcA8/mAZ3MnevJ8DTqQvO6kWLtFHMA9gBd0zM9j4/K5QbdADZgrTLAcXoS5mLW0++xuBK21rdEz4VbKY2unqXPK7I5ttCdwPszxUNgPJ7o120r3EpQHMbGP1pAwA="), PackedByteArray("HmYcl74RBfYQFiwv7cI6q7JHXxCNUgygzg/8uTb/4uH/s20+XHug74/F/Qpq/3gcnUPkriIj0m98Rcv3n+hH5EiT8mM7V8+a8hn7MYaSr7KlmHJ9qLKlO++PyXNNNs85Kf5hwYD5YSQL8CVnkYtoiR6gCTfnAfA/udS8PmlJCQDHqWIi327Id20nOCEfkOkvi9L1rMHDIgrPJUz6zv1ld782t9GJqHkBwP2s/dC/LuCvi3abIwA=")]])
granule_positions = PackedInt64Array(0, 0, 17322)
sampling_rate = 44100.0

[sub_resource type="AudioStreamOggVorbis" id="AudioStreamOggVorbis_4y5q6"]
packet_sequence = SubResource("OggPacketSequence_eymiu")

[node name="player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_ve6k1")
WALK_SPEED = 4.0
RUN_SPEED = 6.0
step_interval_sec = 1.0
step_sounds = Array[AudioStream]([ExtResource("2_uwvuo"), ExtResource("3_x4xhm"), ExtResource("4_1di5f"), ExtResource("5_gvl0y"), ExtResource("6_87xo5")])

[node name="stand_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_il2d2")

[node name="crouch_check" type="RayCast3D" parent="stand_collider"]
target_position = Vector3(0, 2.05, 0)

[node name="Head" type="Node3D" parent="stand_collider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="stand_collider/Head"]

[node name="SpotLight3D" type="SpotLight3D" parent="stand_collider/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.240678, 0.116269)
light_color = Color(0.89, 1, 0.990833, 1)
light_energy = 8.849
shadow_enabled = true
spot_range = 20.0
spot_attenuation = 2.0
spot_angle = 34.56
script = ExtResource("2_6q6cu")

[node name="InteractRaycast" type="RayCast3D" parent="stand_collider/Head"]
target_position = Vector3(0, 0, -2)
script = ExtResource("3_xqmyb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="stand_collider"]
visible = false
mesh = SubResource("CapsuleMesh_yjqeq")

[node name="lean_check" type="ShapeCast3D" parent="stand_collider"]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3sia6")
target_position = Vector3(-1.3, -1, 0)

[node name="coyote_timer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="edge_friction_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01012, 0)
target_position = Vector3(0, -1.05, -1.05)
hit_from_inside = true

[node name="player_sounds" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_vpqoh")
volume_db = -20.0
pitch_scale = 1.5
bus = &"PlayerSounds"

[node name="UI_Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -338.0
offset_right = 338.0
offset_bottom = 338.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="UI_Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_r3k3k")
expand_mode = 1

[node name="Prompt" type="Label" parent="UI_Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 31.0
offset_right = 81.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
text = "You are looking at something."

[node name="Message Panel" type="Panel" parent="UI_Crosshair"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = -135.0
offset_top = -151.0
offset_right = 839.0
offset_bottom = 852.0
script = ExtResource("6_1t8vm")

[node name="Message Text" type="RichTextLabel" parent="UI_Crosshair/Message Panel"]
layout_mode = 0
offset_left = 27.0
offset_top = 21.0
offset_right = 1028.0
offset_bottom = 1022.0
scale = Vector2(0.920746, 0.949683)
bbcode_enabled = true
text = "[font_size=26][center] This is a test text. It should be large, legible, and readable. "

[node name="Label" type="Label" parent="UI_Crosshair/Message Panel"]
layout_mode = 0
offset_left = 7.0
offset_top = 965.0
offset_right = 230.0
offset_bottom = 1006.0
theme_override_font_sizes/font_size = 25
text = "[Press \"E\" to close]"

[node name="footsteps" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamOggVorbis_4y5q6")
volume_db = -24.444
bus = &"PlayerSounds"

[connection signal="on_interact_interactable" from="stand_collider/Head/InteractRaycast" to="UI_Crosshair/Message Panel" method="_on_interact_raycast_on_interact_interactable"]
